# buildpacks-frontend-web

./: CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/scripts/: update-caddy-inventory.sh
.github/workflows/: ci.yml  prepare-release.yml  release.yml  update-caddy-inventory.yml
builder/: README.md  builder.toml
buildpacks/static-web-server/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml  inventory.toml
buildpacks/static-web-server/src/: caddy_config.rs  config_web_server.rs  errors.rs  heroku_web_server_config.rs  install_web_server.rs  main.rs  o11y.rs
buildpacks/static-web-server/tests/: integration_test.rs
buildpacks/static-web-server/tests/fixtures/build_command/: project.toml
buildpacks/static-web-server/tests/fixtures/build_command/public/: index.html
buildpacks/static-web-server/tests/fixtures/caddy_access_logs/: project.toml
buildpacks/static-web-server/tests/fixtures/caddy_access_logs/public/: index.html
buildpacks/static-web-server/tests/fixtures/caddy_basic_auth/: project.toml
buildpacks/static-web-server/tests/fixtures/caddy_basic_auth/public/: index.html
buildpacks/static-web-server/tests/fixtures/caddy_clean_urls/: project.toml
buildpacks/static-web-server/tests/fixtures/caddy_clean_urls/public/: index.html  other.html
buildpacks/static-web-server/tests/fixtures/caddy_clean_urls/public/nested/: index.html  second.html
buildpacks/static-web-server/tests/fixtures/caddy_clean_urls/public/nested/deeper/: index.html
buildpacks/static-web-server/tests/fixtures/caddy_csp_nonce/public/: index.html
buildpacks/static-web-server/tests/fixtures/caddy_static_responses/: project.toml
buildpacks/static-web-server/tests/fixtures/caddy_static_responses/public/: index.html
buildpacks/static-web-server/tests/fixtures/caddy_templates_and_runtime_config/: project.toml
buildpacks/static-web-server/tests/fixtures/caddy_templates_and_runtime_config/public/: index.html
buildpacks/static-web-server/tests/fixtures/client_side_routing/: project.toml
buildpacks/static-web-server/tests/fixtures/client_side_routing/public/: index.html
buildpacks/static-web-server/tests/fixtures/custom_doc_root/: project.toml
buildpacks/static-web-server/tests/fixtures/custom_errors/: project.toml
buildpacks/static-web-server/tests/fixtures/custom_errors/public/: index.html
buildpacks/static-web-server/tests/fixtures/custom_headers/: project.toml
buildpacks/static-web-server/tests/fixtures/custom_headers/public/: index.html  page2.html
buildpacks/static-web-server/tests/fixtures/custom_index/: project.toml
buildpacks/static-web-server/tests/fixtures/custom_index/public/: main.html
buildpacks/static-web-server/tests/fixtures/no_project_toml/public/: index.html
buildpacks/static-web-server/tests/fixtures/nonexistent_doc_root/: project.toml
buildpacks/static-web-server/tests/fixtures/nonexistent_doc_root/not-the-expected-dir-name/: index.html
buildpacks/static-web-server/tests/fixtures/redirect_to_https/: project.toml
buildpacks/static-web-server/tests/fixtures/runtime_config/: project.toml
buildpacks/static-web-server/tests/fixtures/runtime_config/public/: index.html
buildpacks/static-web-server/tests/fixtures/runtime_config/public/subsection/: index.html
buildpacks/static-web-server/tests/fixtures/runtime_config/public/subsection/subsubsection/: index.html  second.html
buildpacks/static-web-server/tests/fixtures/runtime_config/public/subsection/subsubsection/subsubsubsection/: index.html
buildpacks/static-web-server/tests/fixtures/top_level_doc_root/: error-404.html  index.html  project.toml
buildpacks/website-cra/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml
buildpacks/website-cra/src/: errors.rs  main.rs  o11y.rs
buildpacks/website-cra/tests/: integration_test.rs
buildpacks/website-cra/tests/fixtures/cra_app/: package-lock.json
buildpacks/website-ember/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml  package.toml
buildpacks/website-ember/src/: errors.rs  main.rs  o11y.rs
buildpacks/website-ember/tests/: integration_test.rs
buildpacks/website-ember/tests/fixtures/ember_cli_app/: README.md  index.html  package-lock.json  package.json
buildpacks/website-ember/tests/fixtures/ember_cli_app/app/: app.js  index.html  router.js
buildpacks/website-ember/tests/fixtures/ember_cli_app/app/config/: environment.js
buildpacks/website-ember/tests/fixtures/ember_cli_app/app/templates/: application.gjs  application.hbs
buildpacks/website-ember/tests/fixtures/ember_cli_app/config/: environment.js
buildpacks/website-ember/tests/fixtures/ember_cli_app/tests/: index.html  test-helper.js
buildpacks/website-ember/tests/fixtures/not_an_ember_app/: package.json
buildpacks/website-nextjs/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml
buildpacks/website-public-html/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml
buildpacks/website-public-html/src/: errors.rs  import_doc_root.rs  main.rs  o11y.rs
buildpacks/website-public-html/tests/: integration_test.rs
buildpacks/website-public-html/tests/fixtures/custom_root/: project.toml
buildpacks/website-public-html/tests/fixtures/custom_root/www/: index.html
buildpacks/website-public-html/tests/fixtures/other_config/: project.toml
buildpacks/website-public-html/tests/fixtures/other_config/public/: index.html
buildpacks/website-public-html/tests/fixtures/public_html/public/: index.html
buildpacks/website-vite/: Cargo.toml  README.md  buildpack.toml  package.toml
buildpacks/website-vite/src/: errors.rs  main.rs  o11y.rs
buildpacks/website-vite/tests/: integration_test.rs
buildpacks/website-vite/tests/fixtures/vite_app/: index.html  package-lock.json  package.json
buildpacks/website-vite/tests/fixtures/vite_react_app/: index.html  package-lock.json  package.json
buildpacks/website-vite/tests/fixtures/vite_svelte_app/: index.html  package-lock.json  package.json
common/static_web_server_utils/: Cargo.toml
common/static_web_server_utils/src/: lib.rs
test_support/: Cargo.toml
(+21 files in other folders)
