[workspace]
resolver = "2"
members = [
    "buildpacks/website-ember",
    "buildpacks/website-cra",
    "buildpacks/website-nextjs",
    "buildpacks/website-public-html",
    "buildpacks/website-vite",
    "buildpacks/static-web-server",
    "common/env_as_html_data",
    "common/static_web_server_utils",
    "test_support"
]

[workspace.package]
rust-version = "1.96"
edition = "2021"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
libcnb = { version = "=0.31.0", features = ["trace"] }
libcnb-test = "=0.31.0"
libherokubuildpack = { version = "=0.31.0", default-features = false }
test_support = { path = "./test_support" }
toml = { version = "1.1", features = ["preserve_order"] }

[profile.release]
strip = true
