[package]
name = "static-web-server"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = "=0.25.0"
libherokubuildpack = { version = "=0.22.0", default-features = false, features = ["download", "fs", "log", "tar", "toml"] }
indoc = "2"
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
static_web_server_utils = { path = "../../common/static_web_server_utils" }
env_as_html_data = { path = "../../common/env_as_html_data" }
tempfile = "3"
toml = { version = "0.8", features = ["preserve_order"] }
ureq = "2"
indexmap = "2"
regex = "1.12.2"
bullet_stream = "0.10.0"

[dev-dependencies]
libcnb-test = "=0.25.0"
test_support.workspace = true
