[package]
name = "static-web-server"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb.workspace = true
libherokubuildpack = { workspace = true, features = ["download", "inventory", "inventory-semver", "inventory-sha2", "log", "tar"] }
indoc = "2"
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
static_web_server_utils = { path = "../../common/static_web_server_utils" }
env_as_html_data = { path = "../../common/env_as_html_data" }
tempfile = "3"
toml.workspace = true
ureq = "2"
indexmap = "2"
regex = "1.12.2"
bullet_stream = "0.11.0"
tracing = "0.1.44"
const_format = "0.2.35"
glob = "0.3.3"
sha2 = "0.11"
semver = "1"
hex = "0.4"

[dev-dependencies]
libcnb-test.workspace = true
test_support.workspace = true
