[package]
name = "website-cra"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb.workspace = true
libherokubuildpack = { workspace = true, features = ["fs", "log"] }
indoc = "2"
toml.workspace = true
serde_json = "1"
bullet_stream = "0.11.0"
tracing = "0.1.44"
const_format = "0.2.35"

[dev-dependencies]
libcnb-test.workspace = true
tempfile = "3"
test_support.workspace = true
ureq = "2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
