[package]
name = "website-ember"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = "=0.25.0"
commons_ruby = { git = "https://github.com/heroku/buildpacks-ruby", branch = "main", package = "commons" }
libherokubuildpack = { version = "=0.22.0", default-features = false, features = ["fs", "log"] }
indoc = "2"
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
libcnb-test = "=0.25.0"
tempfile = "3"
test_support.workspace = true
ureq = "2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
