[package]
name = "website-public-html"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb.workspace = true
libherokubuildpack = { workspace = true, features = ["fs", "log"] }
indoc = "2"
static_web_server_utils = { path = "../../common/static_web_server_utils" }
toml.workspace = true
bullet_stream = "0.11.0"
tracing = "0.1.44"
const_format = "0.2.35"

[dev-dependencies]
libcnb-test.workspace = true
test_support.workspace = true
