[package]
name = "website-vite"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = { version = "=0.30.2", features = ["trace"] }
libherokubuildpack = { version = "=0.30.2", default-features = false, features = ["fs", "log"] }
indoc = "2"
toml = { version = "0.9", features = ["preserve_order"] }
serde_json = "1"
bullet_stream = "0.10.0"
tracing = "0.1.44"
const_format = "0.2.35"

[dev-dependencies]
libcnb-test = "=0.30.2"
tempfile = "3"
test_support.workspace = true
ureq = "2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
