[package]
name = "static_web_server_utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = { version = "=0.31.0", features = ["trace"] }
libherokubuildpack = { version = "=0.31.0", default-features = false, features = ["toml"] }
toml = { version = "0.9", features = ["preserve_order"] }
